2019-11-20 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: clean up declarations and add ancillary
      PangoLanguage.

    * src/x_toolbars.c: Rename callback functions without capitalization.

2019-11-19 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Refomat documentation, add ancillary GdkGC in
      gtk_sheet_flash so as not to call gtk_widget_get_style four times.

2019-11-13 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_string_list.c: Remove trival debug output from function
      s_string_list_delete_item, add function documentation. Sort the
      pin attributes in s_string_list_sort_master_pin_attrib_list.

    * src/x_gtksheet.c: Remove setting autoresize_columns TRUE for the
      pins sheet in x_gtksheet_init because the width of the first column
      is reduce from the manually set values and the hides the last two
      characters in "pinlabel".

2019-11-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/listsort.c: Reformat function documentation and code style.

    * src/s_string_list.c: Add debug code to print the attribute list, add
      todo documentation template for s_string_list_free and revise debug
      message, utilize __func__ macro.

2019-11-11 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_sheet_data.c: Update s_sheet_data_add_master_comp_list_items
      documention. Utilize __func__ macro in debug output.

    * src/s_string_list.c: Add error message when a NULL record is found in
      s_string_list_sort_master_comp_attrib_list.

    * gattrib/src/s_toplevel.c: Revise s_toplevel_init_data_set to call
      s_table_load_new_page after sorting is sorting is performed. This
      fix bug when sort-components is "enabled".

    * src/x_dialog.c: Remove unused function x_dialog_delete_attrib.

2019-11-08 Wiley E. Hill <wileyhill@gmail.com>

    * src/s_object.c: Remove function s_object_add_net_attrib_to_object, and